# bite-wise

./: .gitignore  README.md  pyproject.toml  start.sh
agents/: user_synthesis_agent.py
backend/: agent.py  frontend_hoster.py  get_recipes.py  main.py  post_recipes.py  pyproject.toml  recipe_scraper.py
backend/agents/nutrition_analysis/: nutrition_analysis.py  nutrition_analysis_prompt.yaml
backend/agents/recipe_creator/: __init__.py  recipe_creator.py  recipe_creator_prompt.yaml
backend/agents/recipe_scraping_agent/: __init__.py  recipe_scraping_agent.py  recipe_scraping_agent_prompt.yaml
backend/database/: db.py  recipe_db_schema.yaml  seed_recipes.json  user_db.json  user_db_schema.yaml
backend/mock_generator/: user_generator.py
frontend/: README.md
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: NutritionDashboard.css  NutritionDashboard.jsx
