[project]
name = "bite-wise"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "crewai",
    "fastapi",
    "google-adk",
    "google-cloud-storage",
    "python-dotenv",
    "recipe-scrapers",
    "langchain-google-genai",
    "langchain-openai",
    "requests",
    "uvicorn",
    "pandas",
    "matplotlib",
    "seaborn",
]
