[project]
name = "bite-wise"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "crewai",
    "fastapi>=0.129.1",
    "google-adk",
    "google-cloud-storage",
    "python-dotenv",
    "recipe-scrapers>=15.11.0",
    "langchain-google-genai>=2.1.12",
    "langchain-openai>=0.3.23",
    "requests>=2.32.5",
    "uvicorn>=0.41.0",
    "pyyaml>=6.0.3",
]
